--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
                         <h3>FitHub</h3>
                         <p>Get Fit, Stay Healthy. Personalized fitness plans and progress tracking.</p>
                     </div>
-                    <div class="app-card">
-                        <img src="./resources/images/taskify.jpg" alt="App 2">
-                        <h3>Taskify</h3>
-                        <p>Boost Productivity, Simplify Tasks. Effective task management and collaboration.</p>
-                    </div>
+                    
                     <div class="app-card">
                         <img src="./resources/images/ailist.jpg" alt="App 3">
                         <h3>AIList</h3>
                         <p>Smart Task Management. AI recommendations and predictive scheduling.</p>
                     </div>
                     <!-- Add more app cards as needed -->
+                    <div class="app-card">
+                        <img src="./resources/images/ailist.jpg" alt="App 3">
+                        <h3>AIList</h3>
+                        <p>Smart Task Management. AI recommendations and predictive scheduling.</p>
+                    </div>
                 </div>
             </div>
         </section>
